feat: added README content feat: possibility to skip properties

--- a/Dnote.MappingValidator.Tests/Dnote.MappingValidator.Tests.csproj
+++ b/Dnote.MappingValidator.Tests/Dnote.MappingValidator.Tests.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dnote.MappingValidator.Library\Dnote.MappingValidator.Library.csproj" />
-    <ProjectReference Include="..\Dnote.MappingValidator.Main\Dnote.MappingValidator.Main.csproj" />
+    <ProjectReference Include="..\Dnote.MappingValidator.Main\Dnote.MappingValidator.Sample.csproj" />
   </ItemGroup>
 
 </Project>
