--- a/Dnote.MappingValidator/Dnote.MappingValidator.csproj
+++ b/Dnote.MappingValidator/Dnote.MappingValidator.csproj
@@ -15,6 +15,7 @@
 	  <RepositoryType>git</RepositoryType>
 	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <Version>1.1.0.0</Version>
+	  <Configurations>Debug;Release;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
